# ticket-triage-agent

./: .gitignore  Dockerfile  README (3).md  README (4).md  README (5).md  README.md  README_final2.md  pyproject.toml
agent/: llm_client.py
app/: main.py  orchestrator.py  schemas.py
assets/: flowchart_ticket_processing.xml
frontend/: index.html
kb/: kb.json  search.py
tests/: test_api.py
